# multi-document-research-assistant

./: README.md  ingest.py  main.py  pyproject.toml  requirements.txt
app/ingestion/: chunking.py  embeddings.py  loader.py  vectorstore.py
app/rag/: research_chain.py  retriever.py
app/ui/: streamlit_app.py
vectorstore/: index.faiss  index.pkl
